--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@ngrx/effects": "~13.0.2",
+    "@ngrx/schematics": "~13.0.2",
+    "@ngrx/store": "~13.0.2",
+    "@ngrx/router-store": "~13.0.2",
+    "@ngrx/store-devtools": "~13.0.2",
+    "angular-in-memory-web-api": "~0.13.0",
+    "immer": "^9.0.18",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
